generating with spring boot 3 and java 17