@@ -1,5 +1,7 @@
 package org.sklsft.generator.components.validation;
 
+import java.lang.reflect.InvocationTargetException;
+
 import org.sklsft.generator.components.validation.rules.impl.Rules;
 import org.sklsft.generator.model.metadata.ProjectMetaData;
 import org.sklsft.generator.model.metadata.validation.ProjectValidationReport;
@@ -14,8 +16,8 @@ public class ProjectMetaDataValidator {
 
 		for (Rules rule : Rules.values()) {
 			try {
-				report = rule.getCheckerClass().newInstance().checkRules(project, report);
-			} catch (InstantiationException | IllegalAccessException e) {
+				report = rule.getCheckerClass().getConstructor().newInstance().checkRules(project, report);
+			} catch (InstantiationException | IllegalAccessException | IllegalArgumentException | InvocationTargetException | NoSuchMethodException | SecurityException e) {
 				throw new Error("Could not instantiate : " + rule.getCheckerClass().getName(), e);
 			}
 		}
